@@ -17,6 +17,14 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix some crashes observed on metalforge:
+common/treasure.c: When generating flesh items from custom monsters,
+  update other_arch of the flesh item to point back to the original
+  base archetype, not the custom archetype.
+random_maps/treasure.c: Create the key object before we reference it
+  in find_first_free_spot()
+MSW 2006-12-26
+
 Make method/property coherent for Python objects.
  plugins/cfpython/cfpython_archetype.c cfpython_party.c cfpython_region.c
  plugins/cfpython/include/cfpython_archetype_private.h cfpython_party_private.h cfpython_region_private.h
